# Tourist_Guide

./: .dockerignore  .env.example  .gitattributes  .gitignore  Caddyfile  Dockerfile  README.md  app.py  augment_from_crops.py  collect_data.py  docker-compose.yml  download_images.py  download_missing.py  download_street_photos.py  evaluate.py  generate_placeholders.py  geocode_landmarks.py  index.html  landmark_download.py  landmarks.json  plan_route.py  predict.py  preflight_check.py  pyproject.toml  requirements-serve.txt  requirements.txt  scrape_tourist_photos.py  sw.js  train.py
.github/workflows/: ci.yml
backend/: app.py  logging_setup.py  route_planner.py
data/: geocode_report.json  landmarks.json  photo_sources.json  planned_route.json
frontend/: index.html  manifest.json  sw.js
models/: class_names.json  landmark_classifier.keras
scripts/: backup.sh
tests/: conftest.py  test_api.py
